// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Survey back does nothing 1`] = `
<div
  className="rjp--container rjp--color-scheme-light"
>
  <div
    className="container"
  >
    <div
      className="progressBar"
    >
      <div
        className="progress"
        style={
          {
            "width": "0%",
          }
        }
      />
    </div>
    <div
      className="text"
    >
      Do you like this job ? 
    </div>
    <div
      className="divider"
    />
    <div
      className="options"
    >
      <button
        className="traitify--response-button"
        onClick={[Function]}
        type="button"
      >
        I don't like it
      </button>
      <button
        className="traitify--response-button"
        onClick={[Function]}
        type="button"
      >
        I like it
      </button>
    </div>
    <div>
      <button
        className="back"
        onClick={[Function]}
        type="button"
      >
        <span
          alt="Back"
          className="traitify--icon-fa"
          dangerouslySetInnerHTML={
            {
              "__html": "<svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="arrow-left" class="svg-inline--fa fa-arrow-left" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.2 288 416 288c17.7 0 32-14.3 32-32s-14.3-32-32-32l-306.7 0L214.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z"></path></svg>",
            }
          }
        />
         
        Back
      </button>
    </div>
  </div>
</div>
`;

exports[`Survey back renders component 1`] = `
<div
  className="rjp--container rjp--color-scheme-light"
>
  <div
    className="container"
  >
    <div
      className="progressBar"
    >
      <div
        className="progress"
        style={
          {
            "width": "0%",
          }
        }
      />
    </div>
    <div
      className="text"
    >
      Do you like this job ? 
    </div>
    <div
      className="divider"
    />
    <div
      className="options"
    >
      <button
        className="traitify--response-button"
        onClick={[Function]}
        type="button"
      >
        I don't like it
      </button>
      <button
        className="traitify--response-button"
        onClick={[Function]}
        type="button"
      >
        I like it
      </button>
    </div>
    <div>
      <button
        className="back"
        onClick={[Function]}
        type="button"
      >
        <span
          alt="Back"
          className="traitify--icon-fa"
          dangerouslySetInnerHTML={
            {
              "__html": "<svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="arrow-left" class="svg-inline--fa fa-arrow-left" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.2 288 416 288c17.7 0 32-14.3 32-32s-14.3-32-32-32l-306.7 0L214.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z"></path></svg>",
            }
          }
        />
         
        Back
      </button>
    </div>
  </div>
</div>
`;

exports[`Survey next renders component 1`] = `
<div
  className="rjp--container rjp--color-scheme-light"
>
  <div
    className="container"
  >
    <div
      className="progressBar"
    >
      <div
        className="progress"
        style={
          {
            "width": "50%",
          }
        }
      />
    </div>
    <div
      className="text"
    >
      Question test 1 (required)
    </div>
    <div
      className="divider"
    />
    <div
      className="options"
    >
      <button
        className="traitify--response-button"
        onClick={[Function]}
        type="button"
      >
        Yes
      </button>
      <button
        className="traitify--response-button"
        onClick={[Function]}
        type="button"
      >
        No
      </button>
    </div>
    <div>
      <button
        className="back"
        onClick={[Function]}
        type="button"
      >
        <span
          alt="Back"
          className="traitify--icon-fa"
          dangerouslySetInnerHTML={
            {
              "__html": "<svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="arrow-left" class="svg-inline--fa fa-arrow-left" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.2 288 416 288c17.7 0 32-14.3 32-32s-14.3-32-32-32l-306.7 0L214.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z"></path></svg>",
            }
          }
        />
         
        Back
      </button>
    </div>
  </div>
</div>
`;

exports[`Survey renders instructions 1`] = `
<div
  className="rjp--container rjp--color-scheme-light"
>
  <div
    className="mock"
  >
    Instructions
  </div>
</div>
`;

exports[`Survey renders nothing 1`] = `
<div
  className="rjp--container rjp--color-scheme-light"
/>
`;

exports[`Survey renders nothing without assessment 1`] = `
<div
  className="rjp--container rjp--color-scheme-light"
/>
`;

exports[`Survey renders question 1`] = `
<div
  className="rjp--container rjp--color-scheme-light"
>
  <div
    className="container"
  >
    <div
      className="progressBar"
    >
      <div
        className="progress"
        style={
          {
            "width": "0%",
          }
        }
      />
    </div>
    <div
      className="text"
    >
      Do you like this job ? 
    </div>
    <div
      className="divider"
    />
    <div
      className="options"
    >
      <button
        className="traitify--response-button"
        onClick={[Function]}
        type="button"
      >
        I don't like it
      </button>
      <button
        className="traitify--response-button"
        onClick={[Function]}
        type="button"
      >
        I like it
      </button>
    </div>
    <div>
      <button
        className="back"
        onClick={[Function]}
        type="button"
      >
        <span
          alt="Back"
          className="traitify--icon-fa"
          dangerouslySetInnerHTML={
            {
              "__html": "<svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="arrow-left" class="svg-inline--fa fa-arrow-left" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.2 288 416 288c17.7 0 32-14.3 32-32s-14.3-32-32-32l-306.7 0L214.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z"></path></svg>",
            }
          }
        />
         
        Back
      </button>
    </div>
  </div>
</div>
`;

exports[`Survey start renders component 1`] = `
<div
  className="rjp--container rjp--color-scheme-light"
>
  <div
    className="container"
  >
    <div
      className="progressBar"
    >
      <div
        className="progress"
        style={
          {
            "width": "0%",
          }
        }
      />
    </div>
    <div
      className="text"
    >
      Do you like this job ? 
    </div>
    <div
      className="divider"
    />
    <div
      className="options"
    >
      <button
        className="traitify--response-button"
        onClick={[Function]}
        type="button"
      >
        I don't like it
      </button>
      <button
        className="traitify--response-button"
        onClick={[Function]}
        type="button"
      >
        I like it
      </button>
    </div>
    <div>
      <button
        className="back"
        onClick={[Function]}
        type="button"
      >
        <span
          alt="Back"
          className="traitify--icon-fa"
          dangerouslySetInnerHTML={
            {
              "__html": "<svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="arrow-left" class="svg-inline--fa fa-arrow-left" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.2 288 416 288c17.7 0 32-14.3 32-32s-14.3-32-32-32l-306.7 0L214.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z"></path></svg>",
            }
          }
        />
         
        Back
      </button>
    </div>
  </div>
</div>
`;

exports[`Survey submit renders component 1`] = `
<div
  className="rjp--container rjp--color-scheme-light"
/>
`;

exports[`Survey submit renders loading 1`] = `
<div
  className="rjp--container rjp--color-scheme-light"
>
  <div
    className="container loading"
  >
    <div
      className="container"
    >
      <div
        className="loading"
      >
        <div />
        <div />
      </div>
    </div>
  </div>
</div>
`;
